# mavis

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  build_image.sh  mavis-ssh.yaml  mavis.yaml  sshd_config
crates/mavis-proto/: Cargo.toml
crates/mavis-proto/src/: lib.rs
crates/mavis-webui/: Cargo.toml
crates/mavis-webui/assets/: index.html
crates/mavis-webui/src/: app.rs  lib.rs  websockets.rs
src/: chatbot.rs  e2_text_to_speech.rs  f5_text_to_speech.rs  hybrid_var_map.rs  llama.rs  main.rs  metavoice_text_to_speech.rs  mumble_connector.rs  parler_text_to_speech.rs  simple_test.rs  speech_to_text.rs  text_generation.rs  text_to_speech.rs  vision_demo.rs
