[package]
name = "mavis"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "mavis"
path = "src/main.rs"

[[bin]]
name = "vision_demo"
path = "src/vision_demo.rs"

[[bin]]
name = "simple_test"
path = "src/simple_test.rs"

[dependencies]
argparse = "0.2.1"
futures = "0.3.31"
bytes = "1.9.0"
mumble-protocol-2x = "0.6.0"
tokio-util = {version= "0.7.13", features=["net", "codec"] }
tokio-native-tls = "0.3.1"
ollama-rs = "0.2.1"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22.1"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
chrono = {version = "0.4.39", features=["serde"]}
socket2 = "0.3.15"

serde_json = "1.0.132"
tokenizers = "0.19.1"
anyhow = "1.0.95"
tracing = {version="0.1.41", features=["log-always"]}
tracing-subscriber = "0.3"
rand = "0.8.5"
byteorder = "1.5.0"
opus = "0.3.0"
regex = "1.11.1"
rubato = "0.16.1"
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
ciborium = { version="0.2.2"}


candle-transformers = { path="libs/candle/candle-transformers", version = "0.8.2" }
candle-core = { path="libs/candle/candle-core", version = "0.8.2" }
candle-nn = { path="libs/candle/candle-nn", version = "0.8.2" }
candle-examples = { path="libs/candle/candle-examples", version = "0.8.1" }
axum = { version = "0.8.4", features = ["http2", "tokio", "ws"] }
mavis-proto = {path="crates/mavis-proto"}

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
cudnn = ["candle-core/cudnn", "cuda"]
